Modifique galeria. Agregue flexbox al footer y al navbar. Hice grids con las fotos. Agregué animaciones a los ancla del nav y a las img

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -25,8 +25,8 @@
 
   <body>
     <header>
-      <nav >
-        <ul>
+      <nav>
+        <ul class="navBar">
           <li><a href="../index.html" class="pages__nav__a texto__gris">Inicio</a></li>
           <li><a href="../pages/sobremi.html" class="pages__nav__a texto__gris"> Sobre mi</a> </li>
           <li><a href="../pages/galeria.html" class="pages__nav__a texto__azul">Galería</a> </li>
@@ -38,78 +38,61 @@
     </header>
 
     <main>
-      <section class="imgGalery">
+      <section class="imgGallery">
         <!--seccion fotos-->
         <h2>Fotos</h2>
-        <div>
-          <img src="../assets/img/desktop/domo1.jpg" alt="Foto Domo1" />
-          <img src="../assets/img/desktop/domo2.jpg" alt="Foto Domo2" />
-          <img src="../assets/img/desktop/domo3.jpg" alt="Foto Domo3" />
-        </div>
-        <div>
-          <img src="../assets/img/desktop/campo1.jpg" alt="Foto Campo1" />
-          <img src="../assets/img/desktop/campo2.jpg" alt="Foto Campo2" />
-          <img src="../assets/img/desktop/campo3.jpg" alt="Foto Campo3" />
-        </div>
-        <div>
-          <img src="../assets/img/desktop/naked1.jpg" alt="Foto Naked1" />
-          <img src="../assets/img/desktop/naked2.jpg" alt="Foto Naked2" />
-          <img src="../assets/img/desktop/naked3.jpg" alt="Foto Naked3" />
-        </div>
-        <div class="imgGalery">
-          <img src="../assets/img/desktop/park1.jpg" alt="Foto Park1" />
-          <img src="../assets/img/desktop/park2.jpg" alt="Foto Park2" />
-          <img src="../assets/img/desktop/park3.jpg" alt="Foto Park3" />
-        </div>
-        <div class="imgGalery">
-          <img src="../assets/img/desktop/city1.jpg" alt="Foto City1" />
-          <img src="../assets/img/desktop/city2.jpg" alt="Foto City2" />
-          <img src="../assets/img/desktop/city3.jpg" alt="Foto City3" />
-        </div>
-        <div>
-          <img src="../assets/img/desktop/agua1.jpg" alt="Foto Agua1" />
-          <img src="../assets/img/desktop/agua2.jpg" alt="Foto Agua2" />
-          <img src="../assets/img/desktop/agua3.jpg" alt="Foto Agua3" />
-        </div>
-        <div>
-          <img src="../assets/img/desktop/agua4.jpg" alt="Foto Agua4" />
-          <img src="../assets/img/desktop/agua5.jpg" alt="Foto Agua5" />
-          <img src="../assets/img/desktop/agua6.jpg" alt="Foto Agua6" />
-        </div>
-        <div>
-          <img src="../assets/img/desktop/winter1.jpg" alt="Foto Winter1" />
-          <img src="../assets/img/desktop/winter2.jpg" alt="Foto Winter2" />
-          <img src="../assets/img/desktop/winter3.jpg" alt="Foto winter3" />
-        </div>
-        <div>
-          <img src="../assets/img/desktop/fruta1.jpg" alt="Foto Fruta1" />
-          <img src="../assets/img/desktop/fruta2.jpg" alt="Foto Fruta2" />
-          <img src="../assets/img/fruta3.JPG" alt="Foto Fruta3" />
-        </div>
-      </section>
-      <section>
+        <section class="container-fotos">
+          <div> <img src="../assets/img/desktop/domo1.jpg" alt="Foto Domo1" class="foto foto-1"/> </div>
+          <div> <img src="../assets/img/desktop/domo2.jpg" alt="Foto Domo2"  class="foto foto-2"/> </div>
+          <div> <img src="../assets/img/desktop/domo3.jpg" alt="Foto Domo3" class="foto foto-3"/> </div>
+          <div> <img src="../assets/img/desktop/campo1.jpg" alt="Foto Campo1" class="foto foto-4"/> </div>
+          <div> <img src="../assets/img/desktop/campo2.jpg" alt="Foto Campo2" class="foto foto-5"/> </div>
+          <div> <img src="../assets/img/desktop/campo3.jpg" alt="Foto Campo3" class="foto foto-6"/> </div>
+          <div> <img src="../assets/img/desktop/naked1.jpg" alt="Foto Naked1" class="foto foto-7"/></div>
+          <div> <img src="../assets/img/desktop/naked2.jpg" alt="Foto Naked2" class="foto foto-8"/></div>
+          <div> <img src="../assets/img/desktop/naked3.jpg" alt="Foto Naked3" class="foto foto-9"/></div>
+          <div> <img src="../assets/img/desktop/park1.jpg" alt="Foto Park1" class="foto foto-10"/></div>
+          <div> <img src="../assets/img/desktop/park2.jpg" alt="Foto Park2" class="foto foto-11"/></div>
+          <div> <img src="../assets/img/desktop/park3.jpg" alt="Foto Park3" class="foto foto-12"/></div>
+          <div> <img src="../assets/img/desktop/city1.jpg" alt="Foto City1" class="foto foto-13"/></div>
+          <div> <img src="../assets/img/desktop/city2.jpg" alt="Foto City2" class="foto foto-14"/></div>
+          <div> <img src="../assets/img/desktop/city3.jpg" alt="Foto City3" class="foto foto-15"/></div>
+          <div> <img src="../assets/img/desktop/agua1.jpg" alt="Foto Agua1" class="foto foto-16"/></div>
+          <div> <img src="../assets/img/desktop/agua2.jpg" alt="Foto Agua2" class="foto foto-17"/></div>
+          <div> <img src="../assets/img/desktop/agua3.jpg" alt="Foto Agua3" class="foto foto-18"/></div>
+          <div> <img src="../assets/img/desktop/winter1.jpg" alt="Foto Winter1" class="foto foto-19"/></div>
+          <div> <img src="../assets/img/desktop/winter2.jpg" alt="Foto Winter2" class="foto foto-20"/></div>
+          <div> <img src="../assets/img/desktop/winter3.jpg" alt="Foto winter3" class="foto foto-21"/></div>
+          <div> <img src="../assets/img/desktop/fruta1.jpg" alt="Foto Fruta1" class="foto foto-22"/></div>
+          <div> <img src="../assets/img/desktop/fruta2.jpg" alt="Foto Fruta2" class="foto foto-23"/></div>
+          <div> <img src="../assets/img/desktop/fruta3.JPG" alt="Foto Fruta3" class="foto foto-24"/></div>
+        </section>
+      <section> 
         <!--seccion videos-->
         <h2>Videos</h2>
-        <div>
-          <iframe
+        <section class="container-videos"> 
+          <div class="video-1">
+            <iframe
             src="https://www.youtube.com/embed/3-MGYgvhKEY"
             title="Sinfonía Humana - Adam Feiguin"
             frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allow="accel erometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-            class="video__styling"
-          ></iframe>
-          <iframe
+            class="video__styling">
+            </iframe>
+          </div>
+          <div class="video-2">
+            <iframe
             src="https://www.youtube.com/embed/dBg6KAlECyk"
             title="Eternidad"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-            class="video__styling"
-          ></iframe>
-        </div>
-        <div>
-          <iframe
+            class="video__styling">
+            </iframe>
+          </div>
+          <div class="video-3">
+            <iframe
             src="https://www.youtube.com/embed/4oV58lLzhAg?list=PLymOtR5jGxHixgz11fc50Afw-R_BW6aez"
             title="Adam Feiguin"
             frameborder="0"
@@ -117,7 +100,9 @@
             allowfullscreen
             class="video__styling"
           ></iframe>
-          <iframe
+          </div>
+          <div class="video-4">
+            <iframe
             src="https://www.youtube.com/embed/XGXQcF2vD1Q"
             title="Adam Feiguin ft. Kanako Hongo"
             frameborder="0"
@@ -125,7 +110,8 @@
             allowfullscreen
             class="video__styling"
           ></iframe>
-        </div>
+          </div> 
+        </section>
       </section>
     </main>
 
