Sumé posicionamiento general de todas las pages + volví a agregar la page agenda que había borrado accidentalmente + empecé a dar estilos a formulario contacto y cards agenda

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -17,7 +17,7 @@
 
     <header>
       <nav >
-        <ul>
+        <ul class="navBar">
           <li><a href="../index.html" class="pages__nav__a texto__gris">Inicio</a></li>
           <li><a href="../pages/sobremi.html" class="pages__nav__a texto__azul"> Sobre mi</a> </li>
           <li><a href="../pages/galeria.html" class="pages__nav__a texto__gris">Galería</a> </li>
@@ -30,9 +30,9 @@
     </header>
 
     <main>
-      <article class=".texto__gris" >
-        <img src="../assets/img/desktop/agua1.jpg " alt="foto bio" class="fotoBio">
-        <p>
+      <article class=".texto__gris container-bio">
+        <img src="../assets/img/desktop/agua1.jpg " alt="foto bio" class="foto-bio">
+        <p class="texto-bio">
           Me llamo Adam y bla bla bla Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam rem
           voluptatem, asperiores dolores quod vitae quis hic non impedit
           laudantium dicta magnam autem? Aperiam id minima voluptatum inventore
@@ -76,10 +76,11 @@
           perspiciatis, laborum itaque animi, eius suscipit velit earum quidem
           vel harum. Fugit eum, facilis debitis atque quod voluptatum. Sint
         </p>
+        <div class="download-cv">
+          <p>Podés descargar mi cv completo <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">haciendo click aquí</a></p>
+        </div> 
       </article> 
-      <div>
-        <p>Podés descargar mi cv completo <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">haciendo click aquí</a></p>
-      </div> 
+      
     </main>
 
     <footer>
