agregué un favicon + posicioné botón info en card agenda + hice un grid por cada línea del formulario de contacto para posicionar más fácilmente + comprimí todas las imágenes + cambié imagen bio por imagen cropeada

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Feiguin</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="shortcut icon" href="../assets/img/campo2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Anton&family=Rubik+Dirt&display=swap" rel="stylesheet">
@@ -36,14 +36,14 @@
             <article class="card__workshop"> <!--arranca card 1, workshop 1-->
               <div> <h2> PROPIOCEPCIÓN CON OBJETOS</h2></div>
               <div>
-                <img src="../assets/img/desktop/IMG_8368.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/desktop/campo1.jpg" alt="Workshop" class="img__workshop">
               </div>
               <div>
                 <p> WORKSHOP<p>
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
@@ -57,7 +57,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
@@ -71,7 +71,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
@@ -85,7 +85,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p> 
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
@@ -99,7 +99,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
@@ -113,7 +113,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
@@ -127,7 +127,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>  
@@ -141,7 +141,7 @@
                 <p>Fecha: 12/12/2022 <br>
                 Lugar: Lugar del workshop</p>
               </div>
-              <div>
+              <div class="contenedor-button">
                 <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
               </div>
             </article>
