--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Feiguin</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="shortcut icon" href="../assets/img/campo2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
     <main>
       <article class=".texto__gris container-bio">
-        <img src="../assets/img/desktop/agua1.jpg " alt="foto bio" class="foto-bio">
+        <img src="../assets/img/desktop/foto-bio.jpg " alt="foto bio" class="foto-bio">
         <p class="texto-bio">
           Me llamo Adam y bla bla bla Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam rem
           voluptatem, asperiores dolores quod vitae quis hic non impedit
