--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Feiguin</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="shortcut icon" href="../assets/img/campo2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
