Agregué media queries para tablet (falta resolver index y contacto) + di formato a texto bio + saqué subtítulos galeria + modifiqué fotos de agenda

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -39,8 +39,8 @@
 
     <main>
       <section class="imgGallery">
-        <!--seccion fotos-->
-        <h2>Fotos</h2>
+        <!--seccion fotos
+        <h2>Fotos</h2>-->
         <section class="container-fotos">
           <div> <img src="../assets/img/desktop/domo1.jpg" alt="Foto Domo2"  class="foto foto-2"/></div>
           <div> <img src="../assets/img/desktop/domo2.jpg" alt="Foto Domo2"  class="foto foto-2"/> </div>
@@ -68,8 +68,8 @@
           <div> <img src="../assets/img/desktop/fruta3.JPG" alt="Foto Fruta3" class="foto foto-24"/></div>
         </section>
       <section> 
-        <!--seccion videos-->
-        <h2>Videos</h2>
+        <!--seccion videos
+        <h2>Videos</h2>-->
         <section class="container-videos"> 
           <div class="video-1">
             <iframe
