Agregué animacioes: en nav index, foto bio, descargar cv bio

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body class="background__index">
       <header>
         <nav class="nav-index">
-            <a href="index.html" class="index__nav__a">Inicio</a>
-            <a href="./pages/sobremi.html" class="index__nav__a"> Sobre mi</a> 
-            <a href="./pages/galeria.html" class="index__nav__a">Galería</a> 
-            <a href="./pages/agenda.html" class="index__nav__a">Agenda</a> 
-            <a href="./pages/contacto.html" class="index__nav__a">Contacto</a>
+            <a href="index.html" class="index__nav__a link-1">Inicio</a>
+            <a href="./pages/sobremi.html" class="index__nav__a link-2"> Sobre mi</a> 
+            <a href="./pages/galeria.html" class="index__nav__a link-3">Galería</a> 
+            <a href="./pages/agenda.html" class="index__nav__a link-4">Agenda</a> 
+            <a href="./pages/contacto.html" class="index__nav__a link-5">Contacto</a>
         </nav>
       </header> 
     
