Modifiqué animación anclas index + cambié margin texto bio + agregué dos fotos de sección agenda + simplifiqué temporalmente el posicionamiento de formulario contacto

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -77,7 +77,7 @@
           vel harum. Fugit eum, facilis debitis atque quod voluptatum. Sint
         </p>
         <div class="download-cv">
-          <p>Podés descargar mi cv completo <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">haciendo click aquí</a></p>
+          <p class="texto__azul">Podés descargar mi cv completo <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">haciendo click aquí</a></p>
         </div> 
       </article> 
       
