Agregué texto briografía provisorio + continué el posicionamiento del formulario provisorio

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -96,8 +96,10 @@
           <div>
             <textarea name="mensaje" id="" cols="30" rows="10" class="text-msje"></textarea> 
           </div>
-          <div>
-            Deseo recibir el newsletter <input type="checkbox" name="newsletter" id="1" />
+          <div class="flex-newsletter">
+            <p class="label-newsletter">Deseo recibir el newsletter</p>
+            <!-- <label for="newsletter" class="label-newsletter">Deseo recibir el newsletter</label>-->
+            <input type="checkbox" name="newsletter" id="1" class="checkbox"/> 
           </div>
           <button type="submit" class="button-contacto">Enviar</button>
         </form>
