--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -32,51 +32,35 @@
     <main>
       <article class=".texto__gris container-bio">
         <img src="../assets/img/desktop/foto-bio.jpg " alt="foto bio" class="foto-bio">
-        <p class="texto-bio">
-          Me llamo Adam y bla bla bla Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam rem
-          voluptatem, asperiores dolores quod vitae quis hic non impedit
-          laudantium dicta magnam autem? Aperiam id minima voluptatum inventore
-          autem! Adipisci provident quibusdam quod modi eveniet? Delectus
-          aliquid ut dolore cupiditate ipsum tempora tenetur quam veniam,
-          dolores quaerat voluptatem velit dolorem! Quaerat, accusamus velit
-          suscipit vel reprehenderit quos sed nihil consequatur accusantium et
-          non nostrum possimus adipisci reiciendis mollitia ipsum quae ea,
-          tempora saepe iure, ut omnis voluptate quasi? Ipsa, optio illo. Hic,
-          doloribus numquam quos minus veniam pariatur dolorem, obcaecati quo
-          odit quas sequi ducimus provident quaerat atque consequuntur earum
-          minima eligendi, asperiores mollitia. Quo, rerum? Accusamus
-          dignissimos quod, quos rem nam sunt doloribus unde corporis est
-          repellat quis amet optio expedita? Nihil praesentium repudiandae,
-          blanditiis enim nulla, voluptate sint maiores quod accusamus dolores
-          deleniti magnam harum a, soluta sit provident asperiores repellendus
-          voluptatibus laudantium illo est impedit voluptatum. Eligendi facilis
-          recusandae mollitia consequuntur atque nisi blanditiis nostrum nulla
-          error, consequatur veniam totam similique corporis ipsum culpa alias
-          pariatur dolorem aspernatur, ut quam voluptates explicabo quas, fugiat
-          sunt! Cumque nostrum, vel odit animi assumenda consequuntur veniam, in
-          natus minima explicabo tenetur et maiores similique qui quaerat
-          perferendis dolore recusandae nesciunt fuga maxime velit saepe officia
-          ab! Odit aliquid consequatur soluta! Voluptates repellat reiciendis
-          expedita necessitatibus dicta nostrum, iure eveniet tempora magni
-          laudantium animi molestias, sed, excepturi dignissimos! Earum
-          doloremque voluptatem obcaecati unde ipsum blanditiis odio quasi omnis
-          perferendis placeat quibusdam praesentium quaerat ratione corporis
-          tenetur, iste dolorum deserunt provident laborum facilis. Unde autem
-          voluptate laudantium voluptatibus fugit asperiores, architecto fugiat
-          labore eaque nulla accusamus mollitia error ut eligendi sunt dolor
-          laboriosam consectetur. Voluptatem aperiam amet aut temporibus
-          nesciunt qui placeat ipsam dicta vitae commodi atque explicabo,
-          facilis inventore consequatur facere cumque dolor fugiat molestias
-          impedit reprehenderit quidem quos mollitia sequi. Enim voluptates
-          assumenda cum quisquam sed saepe debitis, ratione culpa modi. Possimus
-          voluptatibus delectus omnis aut provident non pariatur asperiores iste
-          quam nam quo dignissimos ratione facere porro, obcaecati quia dolore
-          natus praesentium harum id ipsum voluptate quod nisi modi. Eum quis
-          alias doloremque praesentium minima omnis cumque nam facilis, debitis
-          perspiciatis, laborum itaque animi, eius suscipit velit earum quidem
-          vel harum. Fugit eum, facilis debitis atque quod voluptatum. Sint
+        <p></p>
+        <p class="texto-bio"> 
+          <span class="texto-negrita">INVESTIGADOR DEL MOVIMIENTO, PRACTITIONER CERTIFICADO EN MÉTODO FELDENKRAIS. BAILARÍN, PERFORMER, MÚSICO, 
+          PRODUCTOR Y DOCENTE</span> 
+          <br>Desde temprana edad se involucró en actividades artísticas y deportivas. Es egresado de La  Arena, donde posteriormente trabajaría 
+          como docente e interprete de la compañía. Cursó Eutonía y Contact en la Universidad Nacional de Artes, Buenos Aires, Argentina. Dirigió 
+          “Sinfonía Humana”, pieza de videodanza becada por el Ministerio de Cultura de la Nación, rodada íntegramente en el Museo Casa Yrurtia. 
+          <br>Participó en diversas obras y performances entre las que se destacan “Una flor que nace en el jardin” de Adam Feiguin y
+          Kanako Hongo; “Milagro”, Dir. Gerardo Hochman; “Prefijo Des”, Dir. Marina Brusco; “O Ensaio”, Circo do Capao; “Soueiji”, Dir. Harutaka
+          Takasu. 
+          <br> Ha sido invitado a participar en Festivales, Jam Sessions y Performances en Argentina, Brasil, México, Costa Rica, Estados Unidos, España, 
+          Francia, Israel, India y Japón. 
+          <br>Se desempeña como interprete en “Una Constante” dirigida por Jesús Guiraldi, es integrante del gurpo de experimentación 
+          escénica “CUERPX”, dirección Santiago Ablin, es Coach en “Plaga” (Centro Cultural Ricardo Rojas), es docente en “EME, Especialización 
+          Movimiento Experimentación” y “Aliadxs de la  Gravedad”. Acaba de estrenar “The World You Imagine”, obra creada por
+          Una Constante, en el Centro Cultural de la Memoria Haroldo Conti. 
+          
+          <br>Produce actividades artísticas en “Casa Tierra”, un espacio que ha co-fundado dedicado residencias artísticas y retiros 
+          culturales en la naturaleza, en Escobar, Buenos Aires.
+          <br>El foco de su trabajo se centra en la potencia de un cuerpo capaz de observar el viaje de la atención y la posibilidad de 
+          nombrar la relación Acción-Espacio en Tiempo Real. Influenciado por maestros como Daniel Lepkoff, Katrin Smithback, Peter Jasko, 
+          Ilan Lev, la practica de Capoeira Angola, el Yoga y la Natación y principalmente sostenido en el espíritu del Método Feldenkrais, 
+          la Danza Contemporánea y el Contact Improvisation, crea un material físico sensible, poético, inacabado.
+          <br>En la sección "Agenda" podés ver las clases regulares, laboratorios, seminarios, obras y performances que está impartiendo actualmente
         </p>
+        <!--
+        <iframe width="900" height="506" src="https://www.youtube.com/embed/dBg6KAlECyk?autoplay=1" title="Eternidad" frameborder="0"></iframe>-->
         <div class="download-cv">
+        
           <p class="texto__azul">Podés descargar mi cv completo <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">haciendo click aquí</a></p>
         </div> 
       </article> 
