sumé nav de bootstrap + scss

--- a/index2.html
+++ b/index2.html
@@ -6,28 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Feiguin</title>
     <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/styles2.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet"/>
   </head>
 
   <body class="background__index">
-      <header>
-        <nav class="nav-index">
-            <a href="index.html" class="link-1">Inicio</a>
-            <a href="./pages/sobremi.html" class="link-2"> Sobre mi</a> 
-            <a href="./pages/galeria.html" class="link-3">Galería</a> 
-            <a href="./pages/agenda.html" class="link-4">Agenda</a> 
-            <a href="./pages/contacto.html" class="link-5">Contacto</a>
-        </nav>
-      </header> 
+    <header>
+        
+    </header> 
     
-      <main class="container-index">
+    <main class="container-index">
+        <img src="./assets/img/desktop/foto2.jpg" alt="" class="img-index">
+        <nav class="nav-index">
+            <a href="index.html" class="index__nav__a link-1">Inicio</a>
+            <a href="./pages/sobremi.html" class="index__nav__a link-2"> Sobre mi</a> 
+            <a href="./pages/galeria.html" class="index__nav__a link-3">Galería</a> 
+            <a href="./pages/agenda.html" class="index__nav__a link-4">Agenda</a> 
+            <a href="./pages/contacto.html" class="index__nav__a link-5">Contacto</a>
+        </nav>
         <p class="adam">ADAM</p> 
         <p class="feiguin">FEIGUIN</p>
-      </main>
+    </main>
 
     <footer>
       <div> <!--div iconos redes-->
@@ -40,8 +41,5 @@
       </div>  
       <p>&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
     </footer>
-  <!--SCRIPT bootstrap-->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
   </body>
 </html>
