--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Feiguin</title>
     <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!--PT SANS NORROW BOLD-->
@@ -22,55 +23,41 @@
   </head>
 
   <body>
-
-    <header>
-      <div>
-        <nav>
-          <ul class="navBar">
-            <li><a href="../index.html" class="pages__nav__a texto__gris">Inicio</a></li>
-            <li><a href="../pages/sobremi.html" class="pages__nav__a texto__gris"> Sobre mi</a> </li>
-            <li><a href="../pages/galeria.html" class="pages__nav__a texto__gris">Galería</a> </li>
-            <li><a href="../pages/agenda.html" class="pages__nav__a texto__gris">Agenda</a> </li>
-            <li><a href="../pages/contacto.html" class="pages__nav__a texto__azul">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
+    <header class="header-pages">
+      <nav class="navbar navbar-expand-sm">
+          <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end navBar" id="navbarNavDropdown">
+                  <ul class="navbar-nav" >
+                      <li class="nav-item">
+                          <a class="nav-link" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="ms-2 nav-item">
+                          <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
+                      </li>
+                      <li class="ms-2 nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
+                          <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
+                      </ul>
+                      </li>
+                      <li class="ms-2 nav-item">
+                        <a class="nav-link" href="../pages/agenda.html">Agenda</a>
+                      <li class="ms-2 nav-item">                      
+                      <li class="ms-2 nav-item">
+                          <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
       <h1>HOLA</h1>
     </header>
 
     <main>
-      <!-- POSICIONAMIENTO MAS LINDO, PERO NO PUEDO TERMINAR DE RESOLVER..
-      <section class="contendor-formulario">
-        <form action="" class="formulario__contacto">
-          <div class="container-linea-form">
-            <label for="nombrecompleto" class="label-nombre">Nombre Completo:</label> 
-            <input type="text"name="nombrecompleto" class="input-nombre"/> 
-          </div>
-          <div class="container-linea-form">
-            <label for="residencia" class="label-residencia">Lugar de Residencia</label>
-            <select name="residencia" id="residencia" class="select-residencia">
-            Lugar de Residencia
-            <option value="caba">Ciudad Autonoma de Bs As</option>
-            <option value="granbsas">Provincia de Buenos Aires</option>
-            <option value="otroarg">Otras pronvicias de Argentina</option>
-            <option value="otropais">Otro pais que no es Argentina</option>
-            </select>
-          </div>
-          <div class="container-linea-form">
-            <label for="email" class="label-email">E-mail:</label>
-            <input type="email" id="email" name="email" class="input-email"/>
-          </div>
-          <div class="container-linea-form-area">
-            <label for="mensaje" class="label-msje"></label> Mensaje: 
-            <textarea name="mensaje" id="" cols="30" rows="10" class="text-msje"></textarea> 
-          </div>
-          <div class="newsletter" class="container-linea-form">
-            Deseo recibir el newsletter <input type="checkbox" name="newsletter" id="1" />
-          </div>
-          <button type="submit" class="button-contacto">Enviar</button>
-        </form>
-      </section>-->
-
       <section class="contendor-formulario">
         <form action="" class="formulario__contacto">
           <div>
@@ -116,5 +103,8 @@
         </div>  
         <p>&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
       </footer> 
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+      </body>  
   </body>
 </html>
