--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Feiguin</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,18 +16,39 @@
 
   <body>
 
-    <header>
-      <nav >
-        <ul class="navBar">
-          <li><a href="../index.html" class="pages__nav__a texto__gris">Inicio</a></li>
-          <li><a href="../pages/sobremi.html" class="pages__nav__a texto__azul"> Sobre mi</a> </li>
-          <li><a href="../pages/galeria.html" class="pages__nav__a texto__gris">Galería</a> </li>
-          <li><a href="../pages/agenda.html" class="pages__nav__a texto__gris">Agenda</a> </li>
-          <li><a href="../pages/contacto.html" class="pages__nav__a texto__gris">Contacto</a></li>
-        </ul>
+    <header class="header-pages">
+      <nav class="navbar navbar-expand-sm">
+          <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end navBar" id="navbarNavDropdown">
+                  <ul class="navbar-nav" >
+                      <li class="nav-item">
+                          <a class="nav-link" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="ms-2 nav-item">
+                          <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
+                      </li>
+                      <li class="ms-2 nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
+                          <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
+                      </ul>
+                      </li>
+                      <li class="ms-2 nav-item">
+                        <a class="nav-link" href="../pages/agenda.html">Agenda</a>
+                      <li class="ms-2 nav-item">                      
+                      <li class="ms-2 nav-item">
+                          <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
       </nav>
       <!--
-      <h1>HOLA</h1> -->
+      <h1>HOLA</h1>-->
     </header>
 
     <main>
@@ -78,5 +100,7 @@
       </div>  
       <p>&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
   </body>
 </html>
