cambié estilos boton descargar cv + agregué un link interno a bookmark videos + cambié typos contact form

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -32,7 +32,7 @@
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
                       <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
-                          <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
+                          <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
                       </li>
                       <li class="ms-2 nav-item">
