--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -43,7 +43,7 @@
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
-                        <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
+                        <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
                   </li>
                   <li class="ms-2 nav-item">
@@ -89,7 +89,7 @@
           <div> <img src="../assets/img/desktop/fruta2.jpg" alt="Foto Fruta2" class="foto foto-23"/></div>
           <div> <img src="../assets/img/desktop/fruta3.JPG" alt="Foto Fruta3" class="foto foto-24"/></div>
         </section>
-      <section> 
+      <section id="videos"> 
         <!--seccion videos
         <h2>Videos</h2>-->
         <section class="container-videos"> 
