--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,7 @@
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
                       <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
-                          <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
+                          <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
                       </li>
                       <li class="ms-2 nav-item">
@@ -79,7 +79,7 @@
             <input type="email" id="email" name="email" class="input-email"/>
           </div>
           <div>
-            <label for="mensaje" class="label-msje"></label> Mensaje: </div>
+            <label for="mensaje" class="label-msje">Mensaje: </label> </div>
           <div>
             <textarea name="mensaje" id="" cols="30" rows="10" class="text-msje"></textarea> 
           </div>
