--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -34,7 +34,7 @@
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
                       <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
-                          <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
+                          <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
                       </li>
                       <li class="ms-2 nav-item">
@@ -83,7 +83,7 @@
         <iframe width="900" height="506" src="https://www.youtube.com/embed/dBg6KAlECyk?autoplay=1" title="Eternidad" frameborder="0"></iframe>-->
         <div class="download-cv">
         
-          <p class="texto__azul">Podés descargar mi cv completo <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">haciendo click aquí</a></p>
+          <a href="../assets/cv-adam.pdf" download="cv-adam.pdf">Podés descargar mi cv completo haciendo click aquí</a>
         </div> 
       </article> 
       
