Escribí mi README.md + completé mixins de typo + cambié background image en index por div que contenía una background image (en responsive tmb) + cambié nav en index table + arreglé el label de recibir newslettter en contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,9 +90,9 @@
           </div>
           <button type="submit" class="button-contacto">Enviar</button>
         </form>
-      </section>-->
+      </section>
       
-      <footer>
+      <footer class="footer-pages">
         <div> <!--div iconos redes-->
           <ul>
             <a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagra"> </a>   
