--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -89,7 +89,7 @@
       
     </main>
 
-    <footer>
+    <footer class="footer-pages">
       <div> <!--div iconos redes-->
         <ul>
           <a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagra"> </a>   
