--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -137,7 +137,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-pages">
       <div> <!--div iconos redes-->
         <ul>
           <a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagra"> </a>   
