--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -30,7 +30,7 @@
                       </li>
                       <li class="ms-2 nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
-                      <ul class="dropdown-menu">
+                      <ul class="dropdown-menu dropdown-pages">
                           <li><a class="dropdown-item" href="../pages/galeria.html">Fotos</a></li>
                           <li><a class="dropdown-item" href="../pages/galeria.html#videos">Videos</a></li>
                       </ul>
