Probé nueva tipografía + continué con SEO (meta, opngraph, organización bio, keywords)

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="ADAM FEIGUIN. Investigador del movimiento, practitioner certificado en método Feldenkrais, bailarín, performer, músico. 
-    PRODUCTOR Y DOCENTE"> 
+    <meta name="description" content="ADAM FEIGUIN. Investigador del movimiento, practitioner certificado en método Feldenkrais, bailarín, performer, músico, productor y docente"> 
     <meta name="author" content="Lilaj Feiguin">
     <meta name="copyright" content="Adam Feiguin">
     <meta property="og: title" content="Adam Feiguin">
-    <meta property="og: description" content="Investigador del movimiento, practitioner certificado en método Feldenkrais, bailarín, performer, músico. 
-    PRODUCTOR Y DOCENTE">
-    <meta property="og: image" content="./">
+    <meta property="og: description" content="Investigador del movimiento, practitioner certificado en método Feldenkrais, bailarín, performer, músico, productor y docente">
+    <meta property="og: image" content="./assets/img/opengraph.jpg">
     <meta property="og: url" content="https://lilufei85.github.io/website-adam-feiguin/">
     
     <title> Adam Feiguin</title>
     <link rel="shortcut icon" href=".assets/icons/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"/>   
   </head>
 
   <body class="body-index">
