--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+    <meta name="description" content="Galería de Imágenes y Videos"> 
+    <meta name="author" content="Lilaj Feiguin">
+    <meta name="copyright" content="Adam Feiguin">
+    <meta property="og: title" content="Galería Audiovisual | Adam Feiguin">
+    <meta property="og: description" content="Te invito a ver parte de mi trabajo en imágenes y videos">
+    <meta property="og: image" content="./assets/img/opengraph.jpg">
+    <meta property="og: url" content="https://lilufei85.github.io/website-adam-feiguin/pages/galeria.html">
+    
     <title>Galería Audiovisual | Adam Feiguin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet"/>
-    <script
-      src="https://kit.fontawesome.com/b8e2cf14f3.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"/>
   </head>
 
   <body>
